# mavc

./: CMakeLists.txt  config.h.cmake
cmake/: Config.cmake.in  Version.cmake
executable/: CMakeLists.txt  main.c
include/: CMakeLists.txt
include/mavc/: mavc.h  mavc_pub.h
src/: CMakeLists.txt  mavc_comm_objects.h  mavc_core.c  mavc_json.c  mavc_json.h  private.h
tester/: CMakeLists.txt  tester.c
